I learned two ways to display data from input
With ngModel and without it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="page">
   <div class="page__container">
     <h2 class="page__title">Root component</h2>
-    <app-success></app-success>
-    <div app-warning></div>
+    <app-setUser></app-setUser>
   </div>
 </div>
