I added two another test componet, where I learn how to ngStyle work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
   <div class="page__container">
     <h2 class="page__title">Root component</h2>
     <app-setUser></app-setUser>
+    <app-checkUser></app-checkUser>
+    <app-checkUser></app-checkUser>
+    <app-warning></app-warning>
   </div>
 </div>
