--- a/src/app/setUser/setUser.component.html
+++ b/src/app/setUser/setUser.component.html
@@ -12,4 +12,5 @@
   <ng-template #noUser>
     <p>No server was created</p>
   </ng-template>
+  <app-checkUser *ngFor="let user of users"></app-checkUser>
 </div>
