--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
   <div class="page__container">
     <h2 class="page__title">Root component</h2>
     <app-setUser></app-setUser>
-    <app-checkUser></app-checkUser>
-    <app-checkUser></app-checkUser>
     <app-warning></app-warning>
+    <app-example></app-example>
   </div>
 </div>
